[gd_scene load_steps=2 format=2]

[ext_resource path="res://Spatial.gd" type="Script" id=1]

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )
theta = 0.0
phi = 0.0

[node name="xRay" type="RayCast" parent="."]
enabled = false
exclude_parent = true
cast_to = Vector3( 7.4988e-33, 6.12323e-17, 1.22465e-16 )
collision_mask = 1
collide_with_areas = false
collide_with_bodies = true

[node name="yRay" type="RayCast" parent="."]
enabled = false
exclude_parent = true
cast_to = Vector3( 0, 1, 0 )
collision_mask = 1
collide_with_areas = false
collide_with_bodies = true

[node name="zRay" type="RayCast" parent="."]
enabled = false
exclude_parent = true
cast_to = Vector3( 6.12323e-17, 6.12323e-17, 1 )
collision_mask = 1
collide_with_areas = false
collide_with_bodies = true

